# jetblack-fixengine

./: .gitignore  .pylintrc  README.md  mypy copy.ini  mypy.ini  pyproject.toml
aiofix/fix_message/: __init__.py  common.py  decoder.py  encoder.py  fix_message.py  fix_message_factory.py  validation.py
aiofix/loader/: __init__.py  components.py  fields.py  header.py  loader.py  messages.py
aiofix/managers/: initiator_manager.py
aiofix/meta_data/: __init__.py  message_member.py  protocol.py  utils.py
aiofix/middlewares/: fix_message.py
aiofix/persistence/: file_store.py  sql_store.py
aiofix/transports/: acceptor_handler.py  acceptor_transport.py  fix_connection.py  fix_events.py  fix_read_buffer.py  fix_reader_async.py  fix_transport.py  initiator_handler.py  initiator_transport.py
aiofix/utils/: date_utils.py
etc/: FIX40.yaml  FIX41.yaml  FIX42.yaml  FIX43.yaml  FIX44.yaml  README.md
examples/: start_acceptor.py  start_initiator.py  start_initiator_manager.py  yaml_example.py
jetblack_fixengine/: __init__.py  admin_state.py  connection_state.py  time_provider.py  transport_state.py  transport_state_machine.py  types.py
jetblack_fixengine/acceptor/: __init__.py  acceptor.py  acceptor_handler.py  acceptor_state.py  admin_state_machine.py  helpers.py  state.py  state_machine.py  state_transitions.py  transport_state_machine.py  types.py
jetblack_fixengine/admin/: __init__.py  state_processor.py  state_transitions.py  types.py
jetblack_fixengine/initiator/: __init__.py  admin_state_machine.py  connection_state.py  helpers.py  initiator.py  initiator_handler.py  initiator_state.py  state.py  state_machine.py  state_transitions.py  transport_state_machine.py  types.py
jetblack_fixengine/managers/: __init__.py  initiator_manager.py
jetblack_fixengine/persistence/: __init__.py  file_store.py  sql_store.py
jetblack_fixengine/transports/: __init__.py  acceptor_handler.py  acceptor_transport.py  fix_events.py  fix_read_buffer.py  fix_reader_async.py  fix_transport.py  initiator_handler.py  initiator_transport.py  state.py  state_machine.py  state_processor.py  state_transitions.py  transport_state.py  transport_state_machine.py  types.py
jetblack_fixengine/utils/: cancellation.py  date_utils.py
src/aiofix/: types.py
tests/: mocks.py  test_date_utils.py  test_fix_read_buffer.py  test_loader.py
tests/fix_message/: test_encode.py  test_factory.py
tests/initiator/: mocks.py  test_initiator_state.py
(+32 files in other folders)
