[tool.poetry]
name = "jetblack-fixengine"
version = "0.1.0"
description = "A pure Python implementation of the FIX protocol"
authors = ["Rob Blackbourn <rob.blackbourn@googlemail.com>"]
license = "Apache-2.0"
packages = [
    { include = "jetblack_fixengine" }
]
repository = "https://github.com/rob-blackbourn/jetblack-fixengine"

[tool.poetry.dependencies]
python = "^3.8"
aiofiles = "^0.4.0"
aiosqlite = "^0.9.0"
pytz = "^2018.9"
tzlocal = "^1.5"
wheel = "^0.34.2"
"ruamel.yaml" = "^0.16.10"
jetblack-fixparser = "^2.0"

[tool.poetry.dev-dependencies]
pytest = "^4.2"
pytest-asyncio = "^0.10.0"
pytest-runner = "^4.2"
pylint = "^2.5.3"
autopep8 = "^1.5.3"
mypy = "^0.790"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
