[tool.poetry]
name = "jetblack-fixengine"
version = "0.1.0"
description = "A pure Python implementation of the FIX protocol"
authors = ["Rob Blackbourn <rob.blackbourn@googlemail.com>"]
license = "Apache-2.0"
packages = [
    { include = "jetblack_fixengine" }
]
repository = "https://github.com/rob-blackbourn/jetblack-fixengine"

[tool.poetry.dependencies]
python = "^3.8"
aiofiles = "^23.1"
aiosqlite = "^0.18.0"
pytz = "^2022.7"
tzlocal = "^4.3"
"ruamel.yaml" = "^0.17"
jetblack-fixparser = "^2.3"

[tool.poetry.dev-dependencies]
pytest = "^7.2"
pytest-asyncio = "^0.21"
pytest-runner = "^6.0"
pylint = "^2.17"
autopep8 = "^2.0"
mypy = "^1.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
