[tool.poetry]
name = "jetblack-fixengine"
version = "1.0.0-alpha.4"
description = "A pure Python implementation of the FIX protocol"
authors = ["Rob Blackbourn <rob.blackbourn@googlemail.com>"]
license = "Apache-2.0"
packages = [
    { include = "jetblack_fixengine" }
]
repository = "https://github.com/rob-blackbourn/jetblack-fixengine"
readme = "README.md"
keywords = ["fix", "fix-engine"]

[tool.poetry.dependencies]
python = "^3.8"
aiofiles = "^23.1"
aiosqlite = "^0.18.0"
pytz = "^2022.7"
tzlocal = "^4.3"
jetblack-fixparser = "^2.4"

[tool.poetry.dev-dependencies]
autopep8 = "^2.0"
mypy = "^1.1"
pytest = "^7.2"
pytest-asyncio = "^0.21"
pytest-runner = "^6.0"
pylint = "^2.17"
types-aiofiles = "^23.1.0"
types-pytz = "^2022.7.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
